fix: greeting typing jump - max md size

--- a/css/style.scss
+++ b/css/style.scss
@@ -531,7 +531,7 @@ body {
     }
 
     @include breakpoint-max(md) {
-      font-size: 30px;
+      font-size: 28px;
     }
 
     @include breakpoint-max(sm) {
